@@ -1,5 +1,12 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
+(2008-01-09)
+ * Added the possibility to update the position of video while
+   dragging the time slider (instead of updating it only when the
+   slider has been released). Currently it's only possible to
+   enable this option by changing the option update_while_seeking in
+   smplayer.ini. There'll be an option in preferences soon.
+
 (2008-01-08)
  * Added an icon for Help->FAQ (faq.png).
  * Added an icon for Help->About Qt. The icon has been taken from the Qt
